fixed background cutting off

--- a/gibsonwebsite/public/stylesheets/style.css
+++ b/gibsonwebsite/public/stylesheets/style.css
@@ -20,6 +20,8 @@ body{
  	width: 100%;
  	z-index: -1;  
  	opacity: 0.5;
+ 	min-height: 700px;
+ 	
  }
 
  .static-background::before {
